# Easy-XC8

./: LICENSE  README.md  easy_xc8.mk  install.py  project_base.py  pyproject.toml  requirements.txt  targets.mk  todo.md  toolchain.mk  variables.mk
cogscripts/: pins.py  project_variables.py
cogscripts/codegen/: __init__.py  enum.py  function.py  header.py  pins.py  source.py  struct.py  types.py  utils.py
cogscripts/cogutils/: __init__.py  gperf.py  utils.py
cogscripts/pins/: __init__.py  chip_info.py  functions.py  header.py  legacy.py  loader.py  source.py
lode/: codegen.md  configure.md  lode-map.md  reports.md  summary.md  terminology.md  variables.md
makefiles/: targets.mk  variables.mk  venv.mk
scripts/: build.py  compile.py  configure.py  cppcheck.py  dependencies.py  find_source_files.py  load_vars.py  program.py  project.py  release.py  reports.py  scan_deps.py  skip.py  upload.json  upload.py  xc8.py  xc8_cc.py
templates/: .clang-format  c_cpp_properties.json  cogfiles.txt  pins.csv  pins.h  template.json
templates/judi_example/: .clang-format  .gitignore  Makefile  cogfiles.txt  pinmap.py  pins.csv
templates/judi_example/src/: config.h  main.c  system.c  system.h  ui.c  ui.h
templates/judi_example/src/usb/: .gitignore  hash.h  messages.c  messages.h
templates/src/: main.c  pins.c  project_variables.c  project_variables.h  system.c  system.h
