[project]
name = "toolchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clang-format>=21.1.6",
    "cogapp>=3.6.0",
    "dotmap>=1.3.30",
    "inquirerpy>=0.3.4",
    "ipykernel>=7.1.0",
    "numpy>=2.3.5",
    "pip>=25.3",
    "pyyaml>=6.0.3",
]
